<resources>
    <string name="app_name">Bloqui</string>
    <string name="txt1P1">A diario escuchamos noticias sobre la inseguridad en el país.</string>
    <string name="txt2P1">Abusos contra mujeres, hombres y niños.</string>
    <string name="txt3P1">Las cifras en aumento, son parte de nuestra cotidianidad.</string>
    <string name="txt4P1">Con Bloqui la seguridad hará parte de tu telefono.</string>
    <string name="acSelTxt">Selecciona las acciones que quieras realizar al activar Bloqui…</string>
    <string name="defaultMsg">Hola! Me encuentro en peligro, necesito tu ayuda.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="tab_text_1">S1</string>
    <string name="tab_text_2">S2</string>
    <string name="tab_text_3">S3</string>
    <string name="tab_text_4">S4</string>
    <string name="empezar">EMPEZAR</string>
    <string name="continuar">CONTINUAR</string>
    <string name="nombre">NOMBRE</string>
    <string name="usuario">USUARIO</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="edad">EDAD</string>
    <string name="ciudad">CIUDAD</string>
    <string name="sexo">SEXO</string>
    <string name="f">F</string>
    <string name="m">M</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="mensaje_de_emergencia">Mensaje de emergencia</string>
    <string name="llamada_de_emergencia">Llamada de emergencia</string>
    <string name="whatsapp">WHATSAPP</string>
    <string name="telegram">TELEGRAM</string>
    <string name="sms">SMS</string>
    <string name="contacto">CONTACTO</string>
    <string name="_123">123</string>
    <string name="policia">POLICIA</string>
    <string name="mensaje">MENSAJE</string>
    <string name="enviar_ubicaci_n">ENVIAR UBICACIÓN</string>
    <string name="abrir_app_y_grabar_audio">ABRIR APP Y GRABAR AUDIO</string>
    <string name="atr_s">Atrás</string>
    <string name="txtInfoToggles">Elije cómo quieres activar tus acciones.</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="boton_volumen_up">Boton Volumen (+)</string>
    <string name="boton_volumen_dowm">Boton Volumen (-)</string>
    <string name="llamada_a_contacto">Llamada a Contacto</string>
    <string name="llamada_a_policia">Llamada a Policia</string>
    <string name="llamada_al_123">Llamada al 123</string>
    <string name="guardar">GUARDAR</string>
    <string name="cargar">CARGAR</string>
    <string name="whatsapp_suffix">Mensaje automatico enviado por Bloqui.</string>
    <string name="usuario_de_telegram">USUARIO DE TELEGRAM</string>


</resources>