<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterAndSettingsFragments.WhatsAppSetUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:background="@color/appOrangeT"
            android:id="@+id/smsTopBanner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mensaje_de_emergencia"
                android:id="@+id/msg1"
                android:fontFamily="@font/clear_sans_bold"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:background="@drawable/round_outline_orange"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/sms"
                    android:fontFamily="@font/clear_sans_bold"
                    android:layout_marginEnd="5dp"/>

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/sms_logo"/>
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/smsTopBanner"
            android:layout_above="@+id/logo2s"
            android:padding="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacto"
                android:fontFamily="@font/sf_ui_display_regular"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:drawableEnd="@drawable/contact"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:id="@+id/edTxtContactSelectorSMS"
                android:background="@drawable/round_outline_orange"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mensaje"
                android:fontFamily="@font/sf_ui_display_regular"
                android:layout_marginTop="30dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="6"
                android:background="@drawable/round_outline_orange"
                android:hint="@string/defaultMsg"
                android:fontFamily="@font/sf_ui_display_regular"
                android:gravity="top"
                android:padding="10dp"
                android:textSize="15sp"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="50dp"
                android:layout_marginTop="40dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/atr_s"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/btnSMSsiguiente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/siguiente"/>

            </LinearLayout>

        </LinearLayout>
        <ImageView
            android:id="@+id/logo2s"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/logo2"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"/>
    </RelativeLayout>

</FrameLayout>