<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterAndSettingsFragments.WhatsAppSetUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:background="@color/appBlueT"
            android:id="@+id/telTopBanner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mensaje_de_emergencia"
                android:id="@+id/msg1"
                android:fontFamily="@font/clear_sans_bold"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:background="@drawable/round_outline_blue"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/telegram"
                    android:fontFamily="@font/clear_sans_bold"
                    android:layout_marginEnd="5dp"/>

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/telegram_logo"/>
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/telTopBanner"
            android:layout_above="@+id/logo2t"
            android:padding="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacto"
                android:fontFamily="@font/sf_ui_display_regular"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:inputType="textPersonName"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:layout_weight="9"
                    android:id="@+id/edTxtContactSelectorTel"
                    android:background="@drawable/round_outline_blue"/>
                <ImageButton
                    android:id="@+id/contactsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/contact"
                    android:layout_weight="1"
                    android:background="@color/transparent"/>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mensaje"
                android:fontFamily="@font/sf_ui_display_regular"
                android:layout_marginTop="30dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="6"
                android:background="@drawable/round_outline_blue"
                android:hint="@string/defaultMsg"
                android:fontFamily="@font/sf_ui_display_regular"
                android:gravity="top"
                android:padding="10dp"
                android:textSize="15sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enviar_ubicaci_n"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abrir_app_y_grabar_audio"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="50dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/btnTelAtras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/atr_s"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/btnTelSiguiente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/siguiente"/>

            </LinearLayout>

        </LinearLayout>
        <ImageView
            android:id="@+id/logo2t"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/logo2"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"/>
    </RelativeLayout>

</FrameLayout>