<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/toggle_action_cV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/dirtWhite"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mensaje_de_emergencia"
                android:id="@+id/toggle_action_title"
                android:fontFamily="@font/clear_sans_bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_weight="8"/>

            <ImageView
                android:id="@+id/toggle_action_icon"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/whatsapp_logo"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/toggle_relLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="60dp"
            android:layout_above="@id/buttonsTog"
            android:layout_below="@id/actionsViewPager"
            android:padding="30dp">

            <ScrollView
                android:id="@+id/toggle_action_sv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">
                <LinearLayout
                    android:id="@+id/placing_whatsapp_toggles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            </ScrollView>


            <com.getbase.floatingactionbutton.FloatingActionsMenu
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_labelsPosition="left"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                app:fab_addButtonColorNormal="@color/appBlue">

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/whatsappVolUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_size="mini"
                    app:fab_icon="@drawable/ic_baseline_volume_up_24"
                    />

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/whatsappVolDowm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_size="mini"
                    app:fab_icon="@drawable/ic_baseline_volume_down_24"/>

            </com.getbase.floatingactionbutton.FloatingActionsMenu>
        </RelativeLayout>

        <Button
            android:id="@+id/wppGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/guardar" />
        <Button
            android:id="@+id/btnWppLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cargar"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>